compiler/weave_syntax/tests/data/syntax/Function.error
error: unexpected token '[token::identifier]', expected ')'
        --> <source>:3:19
         |
       3 | function mul_high(left: u64, right: u64, lower: out u64) -> u64 {
         |                   ^^^^
error: unexpected token '[token::identifier]', expected '->'
        --> <source>:3:19
         |
       3 | function mul_high(left: u64, right: u64, lower: out u64) -> u64 {
         |                   ^^^^
error: unexpected token ':', expected '{'
        --> <source>:3:23
         |
       3 | function mul_high(left: u64, right: u64, lower: out u64) -> u64 {
         |                       ^
error: unexpected token ':', expected '}'
        --> <source>:3:23
         |
       3 | function mul_high(left: u64, right: u64, lower: out u64) -> u64 {
         |                       ^
hint: unexpected semicolon
        --> <source>:4:34
         |
       4 |     let ll = left & 0xFFFFFFFFu64;
         |                                  ^
hint: unexpected semicolon
        --> <source>:5:27
         |
       5 |     let lu = left >> 32u64;
         |                           ^
hint: unexpected semicolon
        --> <source>:6:35
         |
       6 |     let rl = right & 0xFFFFFFFFu64;
         |                                   ^
hint: unexpected semicolon
        --> <source>:7:28
         |
       7 |     let ru = right >> 32u64;
         |                            ^
hint: unexpected semicolon
        --> <source>:8:24
         |
       8 |     let ll_rl = ll * rl;
         |                        ^
hint: unexpected semicolon
        --> <source>:9:24
         |
       9 |     let ll_ru = ll * ru;
         |                        ^
hint: unexpected semicolon
        --> <source>:10:24
         |
      10 |     let lu_rl = lu * rl;
         |                        ^
hint: unexpected semicolon
        --> <source>:11:24
         |
      11 |     let lu_ru = lu * ru;
         |                        ^
hint: unexpected semicolon
        --> <source>:12:63
         |
      12 |     let m = (ll_rl >> 32u64) + ll_ru + (lu_rl & 0xFFFFFFFFu64);
         |                                                               ^
hint: unexpected semicolon
        --> <source>:13:51
         |
      13 |     lower = (ll_rl & 0xFFFFFFFFu64) | (m << 32u64);
         |                                                   ^
hint: unexpected semicolon
        --> <source>:14:51
         |
      14 |     return (m >> 32u64) + (lu_rl >> 32u64) + lu_ru;
         |                                                   ^
error: unexpected token ':'
        --> <source>:3:23
         |
       3 | function mul_high(left: u64, right: u64, lower: out u64) -> u64 {
         |                       ^
error: unexpected token '[token::identifier]'
        --> <source>:3:25
         |
       3 | function mul_high(left: u64, right: u64, lower: out u64) -> u64 {
         |                         ^^^
error: unexpected token ','
        --> <source>:3:28
         |
       3 | function mul_high(left: u64, right: u64, lower: out u64) -> u64 {
         |                            ^
error: unexpected token '[token::identifier]'
        --> <source>:3:30
         |
       3 | function mul_high(left: u64, right: u64, lower: out u64) -> u64 {
         |                              ^^^^^
error: unexpected token ':'
        --> <source>:3:35
         |
       3 | function mul_high(left: u64, right: u64, lower: out u64) -> u64 {
         |                                   ^
error: unexpected token '[token::identifier]'
        --> <source>:3:37
         |
       3 | function mul_high(left: u64, right: u64, lower: out u64) -> u64 {
         |                                     ^^^
error: unexpected token ','
        --> <source>:3:40
         |
       3 | function mul_high(left: u64, right: u64, lower: out u64) -> u64 {
         |                                        ^
error: unexpected token '[token::identifier]'
        --> <source>:3:42
         |
       3 | function mul_high(left: u64, right: u64, lower: out u64) -> u64 {
         |                                          ^^^^^
error: unexpected token ':'
        --> <source>:3:47
         |
       3 | function mul_high(left: u64, right: u64, lower: out u64) -> u64 {
         |                                               ^
error: unexpected token 'out'
        --> <source>:3:49
         |
       3 | function mul_high(left: u64, right: u64, lower: out u64) -> u64 {
         |                                                 ^^^
error: unexpected token '[token::identifier]'
        --> <source>:3:53
         |
       3 | function mul_high(left: u64, right: u64, lower: out u64) -> u64 {
         |                                                     ^^^
error: unexpected token ')'
        --> <source>:3:56
         |
       3 | function mul_high(left: u64, right: u64, lower: out u64) -> u64 {
         |                                                        ^
error: unexpected token '->'
        --> <source>:3:58
         |
       3 | function mul_high(left: u64, right: u64, lower: out u64) -> u64 {
         |                                                          ^^
error: unexpected token '[token::identifier]'
        --> <source>:3:61
         |
       3 | function mul_high(left: u64, right: u64, lower: out u64) -> u64 {
         |                                                             ^^^
error: unexpected token '{'
        --> <source>:3:65
         |
       3 | function mul_high(left: u64, right: u64, lower: out u64) -> u64 {
         |                                                                 ^
error: unexpected token 'let'
        --> <source>:4:5
         |
       4 |     let ll = left & 0xFFFFFFFFu64;
         |     ^^^
error: unexpected token '[token::identifier]'
        --> <source>:4:9
         |
       4 |     let ll = left & 0xFFFFFFFFu64;
         |         ^^
error: unexpected token '='
        --> <source>:4:12
         |
       4 |     let ll = left & 0xFFFFFFFFu64;
         |            ^
error: unexpected token '[token::identifier]'
        --> <source>:4:14
         |
       4 |     let ll = left & 0xFFFFFFFFu64;
         |              ^^^^
error: unexpected token '&'
        --> <source>:4:19
         |
       4 |     let ll = left & 0xFFFFFFFFu64;
         |                   ^
error: unexpected token '[literal:integer]'
        --> <source>:4:21
         |
       4 |     let ll = left & 0xFFFFFFFFu64;
         |                     ^^^^^^^^^^^^^
error: unexpected token 'let'
        --> <source>:5:5
         |
       5 |     let lu = left >> 32u64;
         |     ^^^
error: unexpected token '[token::identifier]'
        --> <source>:5:9
         |
       5 |     let lu = left >> 32u64;
         |         ^^
error: unexpected token '='
        --> <source>:5:12
         |
       5 |     let lu = left >> 32u64;
         |            ^
error: unexpected token '[token::identifier]'
        --> <source>:5:14
         |
       5 |     let lu = left >> 32u64;
         |              ^^^^
error: unexpected token '>>'
        --> <source>:5:19
         |
       5 |     let lu = left >> 32u64;
         |                   ^^
error: unexpected token '[literal:integer]'
        --> <source>:5:22
         |
       5 |     let lu = left >> 32u64;
         |                      ^^^^^
error: unexpected token 'let'
        --> <source>:6:5
         |
       6 |     let rl = right & 0xFFFFFFFFu64;
         |     ^^^
error: unexpected token '[token::identifier]'
        --> <source>:6:9
         |
       6 |     let rl = right & 0xFFFFFFFFu64;
         |         ^^
error: unexpected token '='
        --> <source>:6:12
         |
       6 |     let rl = right & 0xFFFFFFFFu64;
         |            ^
error: unexpected token '[token::identifier]'
        --> <source>:6:14
         |
       6 |     let rl = right & 0xFFFFFFFFu64;
         |              ^^^^^
error: unexpected token '&'
        --> <source>:6:20
         |
       6 |     let rl = right & 0xFFFFFFFFu64;
         |                    ^
error: unexpected token '[literal:integer]'
        --> <source>:6:22
         |
       6 |     let rl = right & 0xFFFFFFFFu64;
         |                      ^^^^^^^^^^^^^
error: unexpected token 'let'
        --> <source>:7:5
         |
       7 |     let ru = right >> 32u64;
         |     ^^^
error: unexpected token '[token::identifier]'
        --> <source>:7:9
         |
       7 |     let ru = right >> 32u64;
         |         ^^
error: unexpected token '='
        --> <source>:7:12
         |
       7 |     let ru = right >> 32u64;
         |            ^
error: unexpected token '[token::identifier]'
        --> <source>:7:14
         |
       7 |     let ru = right >> 32u64;
         |              ^^^^^
error: unexpected token '>>'
        --> <source>:7:20
         |
       7 |     let ru = right >> 32u64;
         |                    ^^
error: unexpected token '[literal:integer]'
        --> <source>:7:23
         |
       7 |     let ru = right >> 32u64;
         |                       ^^^^^
error: unexpected token 'let'
        --> <source>:8:5
         |
       8 |     let ll_rl = ll * rl;
         |     ^^^
error: unexpected token '[token::identifier]'
        --> <source>:8:9
         |
       8 |     let ll_rl = ll * rl;
         |         ^^^^^
error: unexpected token '='
        --> <source>:8:15
         |
       8 |     let ll_rl = ll * rl;
         |               ^
error: unexpected token '[token::identifier]'
        --> <source>:8:17
         |
       8 |     let ll_rl = ll * rl;
         |                 ^^
error: unexpected token '*'
        --> <source>:8:20
         |
       8 |     let ll_rl = ll * rl;
         |                    ^
error: unexpected token '[token::identifier]'
        --> <source>:8:22
         |
       8 |     let ll_rl = ll * rl;
         |                      ^^
error: unexpected token 'let'
        --> <source>:9:5
         |
       9 |     let ll_ru = ll * ru;
         |     ^^^
error: unexpected token '[token::identifier]'
        --> <source>:9:9
         |
       9 |     let ll_ru = ll * ru;
         |         ^^^^^
error: unexpected token '='
        --> <source>:9:15
         |
       9 |     let ll_ru = ll * ru;
         |               ^
error: unexpected token '[token::identifier]'
        --> <source>:9:17
         |
       9 |     let ll_ru = ll * ru;
         |                 ^^
error: unexpected token '*'
        --> <source>:9:20
         |
       9 |     let ll_ru = ll * ru;
         |                    ^
error: unexpected token '[token::identifier]'
        --> <source>:9:22
         |
       9 |     let ll_ru = ll * ru;
         |                      ^^
error: unexpected token 'let'
        --> <source>:10:5
         |
      10 |     let lu_rl = lu * rl;
         |     ^^^
error: unexpected token '[token::identifier]'
        --> <source>:10:9
         |
      10 |     let lu_rl = lu * rl;
         |         ^^^^^
error: unexpected token '='
        --> <source>:10:15
         |
      10 |     let lu_rl = lu * rl;
         |               ^
error: unexpected token '[token::identifier]'
        --> <source>:10:17
         |
      10 |     let lu_rl = lu * rl;
         |                 ^^
error: unexpected token '*'
        --> <source>:10:20
         |
      10 |     let lu_rl = lu * rl;
         |                    ^
error: unexpected token '[token::identifier]'
        --> <source>:10:22
         |
      10 |     let lu_rl = lu * rl;
         |                      ^^
error: unexpected token 'let'
        --> <source>:11:5
         |
      11 |     let lu_ru = lu * ru;
         |     ^^^
error: unexpected token '[token::identifier]'
        --> <source>:11:9
         |
      11 |     let lu_ru = lu * ru;
         |         ^^^^^
error: unexpected token '='
        --> <source>:11:15
         |
      11 |     let lu_ru = lu * ru;
         |               ^
error: unexpected token '[token::identifier]'
        --> <source>:11:17
         |
      11 |     let lu_ru = lu * ru;
         |                 ^^
error: unexpected token '*'
        --> <source>:11:20
         |
      11 |     let lu_ru = lu * ru;
         |                    ^
error: unexpected token '[token::identifier]'
        --> <source>:11:22
         |
      11 |     let lu_ru = lu * ru;
         |                      ^^
error: unexpected token 'let'
        --> <source>:12:5
         |
      12 |     let m = (ll_rl >> 32u64) + ll_ru + (lu_rl & 0xFFFFFFFFu64);
         |     ^^^
error: unexpected token '[token::identifier]'
        --> <source>:12:9
         |
      12 |     let m = (ll_rl >> 32u64) + ll_ru + (lu_rl & 0xFFFFFFFFu64);
         |         ^
error: unexpected token '='
        --> <source>:12:11
         |
      12 |     let m = (ll_rl >> 32u64) + ll_ru + (lu_rl & 0xFFFFFFFFu64);
         |           ^
error: unexpected token '['
        --> <source>:12:13
         |
      12 |     let m = (ll_rl >> 32u64) + ll_ru + (lu_rl & 0xFFFFFFFFu64);
         |             ^
error: unexpected token '[token::identifier]'
        --> <source>:12:14
         |
      12 |     let m = (ll_rl >> 32u64) + ll_ru + (lu_rl & 0xFFFFFFFFu64);
         |              ^^^^^
error: unexpected token '>>'
        --> <source>:12:20
         |
      12 |     let m = (ll_rl >> 32u64) + ll_ru + (lu_rl & 0xFFFFFFFFu64);
         |                    ^^
error: unexpected token '[literal:integer]'
        --> <source>:12:23
         |
      12 |     let m = (ll_rl >> 32u64) + ll_ru + (lu_rl & 0xFFFFFFFFu64);
         |                       ^^^^^
error: unexpected token ')'
        --> <source>:12:28
         |
      12 |     let m = (ll_rl >> 32u64) + ll_ru + (lu_rl & 0xFFFFFFFFu64);
         |                            ^
error: unexpected token '+'
        --> <source>:12:30
         |
      12 |     let m = (ll_rl >> 32u64) + ll_ru + (lu_rl & 0xFFFFFFFFu64);
         |                              ^
error: unexpected token '[token::identifier]'
        --> <source>:12:32
         |
      12 |     let m = (ll_rl >> 32u64) + ll_ru + (lu_rl & 0xFFFFFFFFu64);
         |                                ^^^^^
error: unexpected token '+'
        --> <source>:12:38
         |
      12 |     let m = (ll_rl >> 32u64) + ll_ru + (lu_rl & 0xFFFFFFFFu64);
         |                                      ^
error: unexpected token '['
        --> <source>:12:40
         |
      12 |     let m = (ll_rl >> 32u64) + ll_ru + (lu_rl & 0xFFFFFFFFu64);
         |                                        ^
error: unexpected token '[token::identifier]'
        --> <source>:12:41
         |
      12 |     let m = (ll_rl >> 32u64) + ll_ru + (lu_rl & 0xFFFFFFFFu64);
         |                                         ^^^^^
error: unexpected token '&'
        --> <source>:12:47
         |
      12 |     let m = (ll_rl >> 32u64) + ll_ru + (lu_rl & 0xFFFFFFFFu64);
         |                                               ^
error: unexpected token '[literal:integer]'
        --> <source>:12:49
         |
      12 |     let m = (ll_rl >> 32u64) + ll_ru + (lu_rl & 0xFFFFFFFFu64);
         |                                                 ^^^^^^^^^^^^^
error: unexpected token ')'
        --> <source>:12:62
         |
      12 |     let m = (ll_rl >> 32u64) + ll_ru + (lu_rl & 0xFFFFFFFFu64);
         |                                                              ^
error: unexpected token '[token::identifier]'
        --> <source>:13:5
         |
      13 |     lower = (ll_rl & 0xFFFFFFFFu64) | (m << 32u64);
         |     ^^^^^
error: unexpected token '='
        --> <source>:13:11
         |
      13 |     lower = (ll_rl & 0xFFFFFFFFu64) | (m << 32u64);
         |           ^
error: unexpected token '['
        --> <source>:13:13
         |
      13 |     lower = (ll_rl & 0xFFFFFFFFu64) | (m << 32u64);
         |             ^
error: unexpected token '[token::identifier]'
        --> <source>:13:14
         |
      13 |     lower = (ll_rl & 0xFFFFFFFFu64) | (m << 32u64);
         |              ^^^^^
error: unexpected token '&'
        --> <source>:13:20
         |
      13 |     lower = (ll_rl & 0xFFFFFFFFu64) | (m << 32u64);
         |                    ^
error: unexpected token '[literal:integer]'
        --> <source>:13:22
         |
      13 |     lower = (ll_rl & 0xFFFFFFFFu64) | (m << 32u64);
         |                      ^^^^^^^^^^^^^
error: unexpected token ')'
        --> <source>:13:35
         |
      13 |     lower = (ll_rl & 0xFFFFFFFFu64) | (m << 32u64);
         |                                   ^
error: unexpected token '|'
        --> <source>:13:37
         |
      13 |     lower = (ll_rl & 0xFFFFFFFFu64) | (m << 32u64);
         |                                     ^
error: unexpected token '['
        --> <source>:13:39
         |
      13 |     lower = (ll_rl & 0xFFFFFFFFu64) | (m << 32u64);
         |                                       ^
error: unexpected token '[token::identifier]'
        --> <source>:13:40
         |
      13 |     lower = (ll_rl & 0xFFFFFFFFu64) | (m << 32u64);
         |                                        ^
error: unexpected token '<<'
        --> <source>:13:42
         |
      13 |     lower = (ll_rl & 0xFFFFFFFFu64) | (m << 32u64);
         |                                          ^^
error: unexpected token '[literal:integer]'
        --> <source>:13:45
         |
      13 |     lower = (ll_rl & 0xFFFFFFFFu64) | (m << 32u64);
         |                                             ^^^^^
error: unexpected token ')'
        --> <source>:13:50
         |
      13 |     lower = (ll_rl & 0xFFFFFFFFu64) | (m << 32u64);
         |                                                  ^
error: unexpected token 'return'
        --> <source>:14:5
         |
      14 |     return (m >> 32u64) + (lu_rl >> 32u64) + lu_ru;
         |     ^^^^^^
error: unexpected token '['
        --> <source>:14:12
         |
      14 |     return (m >> 32u64) + (lu_rl >> 32u64) + lu_ru;
         |            ^
error: unexpected token '[token::identifier]'
        --> <source>:14:13
         |
      14 |     return (m >> 32u64) + (lu_rl >> 32u64) + lu_ru;
         |             ^
error: unexpected token '>>'
        --> <source>:14:15
         |
      14 |     return (m >> 32u64) + (lu_rl >> 32u64) + lu_ru;
         |               ^^
error: unexpected token '[literal:integer]'
        --> <source>:14:18
         |
      14 |     return (m >> 32u64) + (lu_rl >> 32u64) + lu_ru;
         |                  ^^^^^
error: unexpected token ')'
        --> <source>:14:23
         |
      14 |     return (m >> 32u64) + (lu_rl >> 32u64) + lu_ru;
         |                       ^
error: unexpected token '+'
        --> <source>:14:25
         |
      14 |     return (m >> 32u64) + (lu_rl >> 32u64) + lu_ru;
         |                         ^
error: unexpected token '['
        --> <source>:14:27
         |
      14 |     return (m >> 32u64) + (lu_rl >> 32u64) + lu_ru;
         |                           ^
error: unexpected token '[token::identifier]'
        --> <source>:14:28
         |
      14 |     return (m >> 32u64) + (lu_rl >> 32u64) + lu_ru;
         |                            ^^^^^
error: unexpected token '>>'
        --> <source>:14:34
         |
      14 |     return (m >> 32u64) + (lu_rl >> 32u64) + lu_ru;
         |                                  ^^
error: unexpected token '[literal:integer]'
        --> <source>:14:37
         |
      14 |     return (m >> 32u64) + (lu_rl >> 32u64) + lu_ru;
         |                                     ^^^^^
error: unexpected token ')'
        --> <source>:14:42
         |
      14 |     return (m >> 32u64) + (lu_rl >> 32u64) + lu_ru;
         |                                          ^
error: unexpected token '+'
        --> <source>:14:44
         |
      14 |     return (m >> 32u64) + (lu_rl >> 32u64) + lu_ru;
         |                                            ^
error: unexpected token '[token::identifier]'
        --> <source>:14:46
         |
      14 |     return (m >> 32u64) + (lu_rl >> 32u64) + lu_ru;
         |                                              ^^^^^
error: unexpected token '}', expected '[token::end-of-file]'
        --> <source>:15:1
         |
      15 | }
         | ^
